--- a/.github/workflows/maintainer_merge_comment.yml
+++ b/.github/workflows/maintainer_merge_comment.yml
@@ -25,8 +25,8 @@ jobs:
           exit: true # optional. If the action should exit if the user is not part of the team. Defaults to true.
 
       - uses: actions/checkout@v4
-        with:
-          ref: master
+        #with:
+        #  ref: master
 
       - name: Determine Zulip topic
         id: determine_topic
