--- a/.github/workflows/maintainer_merge_comment.yml
+++ b/.github/workflows/maintainer_merge_comment.yml
@@ -29,6 +29,11 @@ jobs:
         #with:
         #  ref: master
 
+      - name: Make comment
+        id: make_comment
+        run: |
+          printf 'comment<<EEE\nHello\nmaintainer merge\nEEE' >> "$GITHUB_OUTPUT"
+
       - name: Determine Zulip topic
         id: determine_topic
         run: |
@@ -40,7 +45,7 @@ jobs:
       - name: Form the message
         id: merge_or_delegate
         env:
-          BODY: 'maintainer merge' #${{ github.event.comment.body }}
+          BODY: ${{ steps.make_comment.outputs.comment }} #${{ github.event.comment.body }}
         run: |
           ./scripts/maintainer_merge_message.sh "${BODY}" comment
           ./scripts/maintainer_merge_message.sh "${BODY}" comment >> "${GITHUB_OUTPUT}"
