--- a/.github/workflows/maintainer_merge_comment.yml
+++ b/.github/workflows/maintainer_merge_comment.yml
@@ -47,6 +47,7 @@ jobs:
         env:
           BODY: ${{ steps.make_comment.outputs.comment }} #${{ github.event.comment.body }}
         run: |
+          echo ${{ steps.determine_topic.outputs.topic }}
           ./scripts/maintainer_merge_message.sh "${BODY}" comment | tee "$GITHUB_OUTPUT"
           #if printf '%s\n' "${BODY}" | grep "^maintainer merge"
           #then
