--- a/.github/workflows/maintainer_merge_comment.yml
+++ b/.github/workflows/maintainer_merge_comment.yml
@@ -77,7 +77,9 @@ jobs:
         with:
           issue-number: 18736 # ${{ github.event.issue.number }}
           body: |
-            🚀 Pull request has been placed on the maintainer queue by ${{ github.event.comment.user.login }}.            #${{ steps.merge_or_delegate.outputs.title }}            #> ${{ github.event.issue.title }}
+            🚀 Pull request has been placed on the maintainer queue by ${{ github.event.comment.user.login }}.
+            ${{ steps.merge_or_delegate.outputs.title }}
+            > ${{ github.event.issue.title }}
       #- name: Add label to PR
       #  uses: actions/github-script@v7
       #  with:
