--- a/.github/workflows/maintainer_merge_comment.yml
+++ b/.github/workflows/maintainer_merge_comment.yml
@@ -79,7 +79,7 @@ jobs:
           body: |
             🚀 Pull request has been placed on the maintainer queue by ${{ github.event.comment.user.login }}.
             ${{ steps.merge_or_delegate.outputs.title }}
-            > ${{ github.event.issue.title }}
+            > feat: maintainer delegate everywhere #${{ github.event.issue.title }}
       #- name: Add label to PR
       #  uses: actions/github-script@v7
       #  with:
