--- a/.github/workflows/maintainer_merge_comment.yml
+++ b/.github/workflows/maintainer_merge_comment.yml
@@ -78,8 +78,7 @@ jobs:
         with:
           issue-number: 18736 # ${{ github.event.issue.number }}
           body: |
-            🚀 Pull request has been placed on the maintainer queue by ${{ github.event.comment.user.login }}.
-            ${{ steps.merge_or_delegate.outputs.title }}
+            🚀 Pull request has been placed on the maintainer queue by ${{ github.event.comment.user.login }}.    before        "${{ steps.merge_or_delegate.outputs.title }}"   after
             > feat: maintainer delegate everywhere #${{ github.event.issue.title }}
       #- name: Add label to PR
       #  uses: actions/github-script@v7
