--- a/.github/workflows/maintainer_merge_comment.yml
+++ b/.github/workflows/maintainer_merge_comment.yml
@@ -49,7 +49,8 @@ jobs:
         run: |
           echo "Topic: ${{ steps.determine_topic.outputs.topic }}"
           printf 'Comment: %s\nEnd comment\n' "${{ steps.make_comment.outputs.comment }}"
-          printf 'title<<EOF\n%s\nEOF' "A simple message" | tee
+          printf 'title<<EOF\n%s\nEOF' "A simple message" #| tee
+          printf 'title<<EOF\n%s\nEOF' "A simple message" >> "$GITHUB_OUTPUT"
 
       #- name: Send message on Zulip
       #  uses: zulip/github-actions-zulip/send-message@v1
