--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,7 @@
 {
     "editor.insertSpaces": true,
     "editor.tabSize": 2,
-    "editor.rulers": [
-        100
-    ],
+    "editor.rulers" : [100],
     "editor.acceptSuggestionOnEnter": "off",
     "files.encoding": "utf8",
     "files.eol": "\n",
@@ -11,20 +9,16 @@
     "files.trimFinalNewlines": true,
     "files.trimTrailingWhitespace": true,
     "githubPullRequests.ignoredPullRequestBranches": [
-        "master"
+      "master"
     ],
     "git.ignoreLimitWarning": true,
     "git.branchProtection": [
-        "master",
-        "stable",
-        "staging"
+      "master",
+      "stable",
+      "staging"
     ],
     "files.readonlyInclude": {
-        "**/.elan/**": true,
-        "**/.lake/**": true
-    },
-    "files.associations": {
-        "*.rsh": "javascript"
-    },
-    "javascript.suggest.completeFunctionCalls": true
-}
+      "**/.elan/**": true,
+      "**/.lake/**": true
+    }
+  }
