also issue_comment

--- a/.github/workflows/maintainer_merge_comment.yml
+++ b/.github/workflows/maintainer_merge_comment.yml
@@ -2,8 +2,8 @@ name: Maintainer merge (comment)
 
 on:
   push:
-  #issue_comment:
-  #  types: [created, edited]
+  issue_comment:
+    types: [created, edited]
 
 jobs:
   ping_zulip:
