--- a/.github/workflows/maintainer_merge_comment.yml
+++ b/.github/workflows/maintainer_merge_comment.yml
@@ -45,10 +45,11 @@ jobs:
       - name: Form the message
         id: merge_or_delegate
         env:
-          BODY: ${{ steps.make_comment.outputs.comment }} #${{ github.event.comment.body }}
+          BODY: ${{ steps.make_comment.outputs.comment }}
+          COMMENT: ${{ github.event.comment.body }}
           PR_TITLE: ${{ github.event.issue.title }}
         run: |
-          echo "comment body: '${{ github.event.comment.body }}'"
+          echo "comment body: '${COMMENT}'"
           echo "pr?: '${{ github.event.issue.pull_request }}'"
           message="$(
             ./scripts/maintainer_merge_message.sh author:"${{ github.event.comment.user.login }}|" body:"${BODY}|" comment issueNumber:"${{ github.event.issue.number }}|" https:"${{ github.event.issue.html_url }}|" pr_title:"${PR_TITLE}"
