--- a/.github/workflows/maintainer_merge_comment.yml
+++ b/.github/workflows/maintainer_merge_comment.yml
@@ -53,6 +53,7 @@ jobs:
           echo "pr?: '${{ github.event.issue.pull_request }}'"
           echo "title: '${PR_TITLE:-PR_TITLE not set}'"
           echo "github.event_name: '${{ github.event_name }}'"
+          echo "github.ref: '${{ github.ref }}'"
           message="$(
             ./scripts/maintainer_merge_message.sh author:"${{ github.event.comment.user.login }}|" body:"${BODY}|" comment issueNumber:"${{ github.event.issue.number }}|" https:"${{ github.event.issue.html_url }}|" pr_title:"${PR_TITLE}"
           )"
