--- a/.github/workflows/zulip_emoji_merge_delegate.yaml
+++ b/.github/workflows/zulip_emoji_merge_delegate.yaml
@@ -10,7 +10,7 @@ jobs:
 
     steps:
     - name: Set up Python
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v5
       with:
         python-version: '3.x'
 
@@ -53,7 +53,7 @@ jobs:
         })
 
         messages = response['messages']
-        pr_pattern = re.compile(r'#(\d{1,5})')
+        pr_pattern = re.compile(r'(^|\s)#(\d{1,5})')
 
         for message in messages:
             content = message['content']
