--- a/.github/workflows/maintainer_merge_comment.yml
+++ b/.github/workflows/maintainer_merge_comment.yml
@@ -1,18 +1,17 @@
 name: Maintainer merge (comment)
 
 on:
-  push:
   issue_comment:
     types: [created, edited]
 
 jobs:
   ping_zulip:
     name: Ping maintainers on Zulip
-    #if: github.event.issue.pull_request &&
-    #    ((startsWith(github.event.comment.body, 'maintainer merge') ||
-    #    contains(toJSON(github.event.comment.body), '\nmaintainer merge')) ||
-    #    (startsWith(github.event.comment.body, 'maintainer delegate') ||
-    #    contains(toJSON(github.event.comment.body), '\nmaintainer delegate')))
+    if: github.event.issue.pull_request &&
+        ((startsWith(github.event.comment.body, 'maintainer merge') ||
+        contains(toJSON(github.event.comment.body), '\nmaintainer merge')) ||
+        (startsWith(github.event.comment.body, 'maintainer delegate') ||
+        contains(toJSON(github.event.comment.body), '\nmaintainer delegate')))
     runs-on: ubuntu-latest
     steps:
       - name: Check whether user is part of mathlib-reviewers team
@@ -26,13 +25,8 @@ jobs:
           exit: true # optional. If the action should exit if the user is not part of the team. Defaults to true.
 
       - uses: actions/checkout@v4
-        #with:
-        #  ref: master
-
-      - name: Make comment
-        id: make_comment
-        run: |
-          printf 'comment<<EEE\nHello\nmaintainer merge\nsomething else\nEEE' >> "$GITHUB_OUTPUT"
+        with:
+          ref: master
 
       - name: Determine Zulip topic
         id: determine_topic
@@ -45,49 +39,41 @@ jobs:
       - name: Form the message
         id: merge_or_delegate
         env:
-          BODY: ${{ steps.make_comment.outputs.comment }}
-          COMMENT: ${{ github.event.comment.body }}
-          PR_TITLE: ${{ github.event.issue.title }}
+          BODY: ${{ github.event.comment.body }}
         run: |
-          echo "comment body: '${COMMENT:-COMMENT not set}'"
-          echo "pr?: '${{ github.event.issue.pull_request }}'"
-          echo "title: '${PR_TITLE:-PR_TITLE not set}'"
-          echo "github.event_name: '${{ github.event_name }}'"
-          echo "github.ref: '${{ github.ref }}'"
-          echo "github.event.action: '${{ github.event.action }}'"
-          echo ""
-          message="$(
-            ./scripts/maintainer_merge_message.sh author:"${{ github.event.comment.user.login }}|" body:"${BODY}|" comment issueNumber:"${{ github.event.issue.number }}|" https:"${{ github.event.issue.html_url }}|" pr_title:"${PR_TITLE}"
-          )"
-          printf 'title<<EOF\n%s\nEOF' "${message}"
-          printf 'title<<EOF\n%s\nEOF' "${message}" >> "$GITHUB_OUTPUT"
+          if printf '%s\n' "${BODY}" | grep "^maintainer merge"
+          then
+            printf $'title<<EOF\n%s\nEOF' "${{ format('{0} requested a maintainer merge from comment on PR [#{1}]({2}):', github.event.comment.user.login, github.event.issue.number, github.event.issue.html_url ) }}" >> "${GITHUB_OUTPUT}"
+          elif printf '%s\n' "${BODY}" | grep "^maintainer delegate"
+          then
+            printf $'title<<EOF\n%s\nEOF' "${{ format('{0} requested a maintainer delegate from comment on PR [#{1}]({2}):', github.event.comment.user.login, github.event.issue.number, github.event.issue.html_url ) }}" >> "${GITHUB_OUTPUT}"
+          fi
 
-      #- name: Send message on Zulip
-      #  uses: zulip/github-actions-zulip/send-message@v1
-      #  with:
-      #    api-key: ${{ secrets.ZULIP_API_KEY }}
-      #    email: 'github-mathlib4-bot@leanprover.zulipchat.com'
-      #    organization-url: 'https://leanprover.zulipchat.com'
-      #    to: 'mathlib reviewers'
-      #    type: 'stream'
-      #    topic: ${{ steps.determine_topic.outputs.topic }}
-      #    content: |
-      #      ${{ steps.merge_or_delegate.outputs.title }}
+      - name: Send message on Zulip
+        uses: zulip/github-actions-zulip/send-message@v1
+        with:
+          api-key: ${{ secrets.ZULIP_API_KEY }}
+          email: 'github-mathlib4-bot@leanprover.zulipchat.com'
+          organization-url: 'https://leanprover.zulipchat.com'
+          to: 'mathlib reviewers'
+          type: 'stream'
+          topic: ${{ steps.determine_topic.outputs.topic }}
+          content: |
+            ${{ steps.merge_or_delegate.outputs.title }}
 
-      #      > ${{ github.event.issue.title }}
+            > ${{ github.event.issue.title }}
 
       - name: Add comment to PR
         uses: GrantBirki/comment@v2
         with:
-          issue-number: 18736 # ${{ github.event.issue.number }}
+          issue-number: ${{ github.event.issue.number }}
           body: |
             🚀 Pull request has been placed on the maintainer queue by ${{ github.event.comment.user.login }}.
-            ${{ steps.merge_or_delegate.outputs.title }}
 
-      #- name: Add label to PR
-      #  uses: actions/github-script@v7
-      #  with:
-      #    github-token: ${{secrets.GITHUB_TOKEN}}
-      #    script: |
-      #      const { owner, repo, number: issue_number } = context.issue;
-      #      await github.rest.issues.addLabels({ owner, repo, issue_number, labels: ['maintainer-merge'] });
+      - name: Add label to PR
+        uses: actions/github-script@v7
+        with:
+          github-token: ${{secrets.GITHUB_TOKEN}}
+          script: |
+            const { owner, repo, number: issue_number } = context.issue;
+            await github.rest.issues.addLabels({ owner, repo, issue_number, labels: ['maintainer-merge'] });
