--- a/.github/workflows/maintainer_merge_review.yml
+++ b/.github/workflows/maintainer_merge_review.yml
@@ -8,11 +8,7 @@ on:
 jobs:
   ping_zulip:
     name: Ping maintainers on Zulip
-    if: github.event.issue.pull_request &&
-        ((startsWith(github.event.comment.body, 'maintainer merge') ||
-        contains(toJSON(github.event.comment.body), '\nmaintainer merge')) ||
-        (startsWith(github.event.comment.body, 'maintainer delegate') ||
-        contains(toJSON(github.event.comment.body), '\nmaintainer delegate')))
+    if: (startsWith(github.event.review.body, 'maintainer merge') || contains(toJSON(github.event.review.body), '\nmaintainer merge'))
     runs-on: ubuntu-latest
     steps:
       - name: Check whether user is part of mathlib-reviewers team
@@ -34,14 +30,6 @@ jobs:
           PR:  /repos/leanprover-community/mathlib4/issues/${{ github.event.pull_request.number }}
           GH_TOKEN: ${{secrets.GITHUB_TOKEN}}
 
-      - name: Form the message
-        id: merge_or_delegate
-        env:
-          BODY: ${{ github.event.comment.body }}
-        run: |
-          ./scripts/maintainer_merge_message.sh "${BODY}" review >> "${GITHUB_OUTPUT}"
-          #${{ format('{0} requested a maintainer merge from review on PR [#{1}]({2}):', github.event.review.user.login, github.event.pull_request.number, github.event.pull_request.html_url ) }}
-
       - name: Send message on Zulip
         uses: zulip/github-actions-zulip/send-message@v1
         with:
@@ -52,6 +40,7 @@ jobs:
           type: 'stream'
           topic: ${{ steps.determine_topic.outputs.topic }}
           content: |
+            ${{ format('{0} requested a maintainer merge from review on PR [#{1}]({2}):', github.event.review.user.login, github.event.pull_request.number, github.event.pull_request.html_url ) }}
 
             > ${{ github.event.pull_request.title }}
 
