--- a/.github/workflows/maintainer_merge_review_comment.yml
+++ b/.github/workflows/maintainer_merge_review_comment.yml
@@ -7,11 +7,7 @@ on:
 jobs:
   ping_zulip:
     name: Ping maintainers on Zulip
-    if: github.event.issue.pull_request &&
-        ((startsWith(github.event.comment.body, 'maintainer merge') ||
-        contains(toJSON(github.event.comment.body), '\nmaintainer merge')) ||
-        (startsWith(github.event.comment.body, 'maintainer delegate') ||
-        contains(toJSON(github.event.comment.body), '\nmaintainer delegate')))
+    if: (startsWith(github.event.comment.body, 'maintainer merge') || contains(toJSON(github.event.comment.body), '\nmaintainer merge'))
     runs-on: ubuntu-latest
     steps:
       - name: Check whether user is part of mathlib-reviewers team
