--- a/.github/workflows/bench_summary_comment.yml
+++ b/.github/workflows/bench_summary_comment.yml
@@ -19,10 +19,9 @@ jobs:
 
       - uses: actions/checkout@v4
         with:
-          ref: adomani/improve_messaging_bench_action #master
+          ref: master
           sparse-checkout: |
             scripts/bench_summary.lean
-            .github/workflows/bench_summary_comment.yml
 
       - name: Summarize bench output
         run: |
