feat: add Dockerfiles for lean and mathlib (#15936)
Add Dockerfiles for lean and mathlib



Co-authored-by: Kim Morrison <kim@tqft.net>

--- a/.docker/gitpod-blueprint/Dockerfile
+++ b/.docker/gitpod-blueprint/Dockerfile
@@ -1,4 +1,5 @@
-# This is the Dockerfile for `leanprovercommunity/gitpod4`.
+# This is the Dockerfile for `leanprovercommunity/gitpod4-blueprint`.
+# As well as elan, we also install leanblueprint and all of its dependencies.
 
 # This container does not come with a pre-installed version of mathlib.
 # When a gitpod container is spawned, elan will be updated and mathlib will be downloaded:
@@ -9,7 +10,7 @@ FROM ubuntu:jammy
 USER root
 
 ENV DEBIAN_FRONTEND=noninteractive
-RUN apt-get update && apt-get install sudo git curl git bash-completion python3 python3-pip python3-requests -y && apt-get clean
+RUN apt-get update && apt-get install sudo git curl git bash-completion texlive texlive-xetex latexmk graphviz graphviz-dev python3 python3-pip python3-requests -y && apt-get clean
 
 RUN useradd -l -u 33333 -G sudo -md /home/gitpod -s /bin/bash -p gitpod gitpod \
     # passwordless sudo for users in the 'sudo' group
@@ -32,6 +33,9 @@ RUN . ~/.profile && elan toolchain install $(curl https://raw.githubusercontent.
 RUN curl -s -L https://github.com/neovim/neovim/releases/download/stable/nvim-linux64.tar.gz | tar xzf - && sudo mv nvim-linux64 /opt/nvim
 
 ENV PATH="/home/gitpod/.local/bin:/home/gitpod/.elan/bin:/opt/nvim/bin:${PATH}"
+
+# install leanblueprint
+RUN python3 -m pip install leanblueprint invoke
 
 # fix the infoview when the container is used on gitpod:
 ENV VSCODE_API_VERSION="1.50.0"
