fixes for leanprover/lean4#5988

--- a/lake-manifest.json
+++ b/lake-manifest.json
@@ -5,7 +5,7 @@
    "type": "git",
    "subDir": null,
    "scope": "leanprover-community",
-   "rev": "d9e997fb60f8d4fcbf03270fbb696f7c87ee0e25",
+   "rev": "4fbc598626f02cae3d60708c04a09c311bb60369",
    "name": "batteries",
    "manifestFile": "lake-manifest.json",
    "inputRev": "lean-pr-testing-5988",
@@ -25,10 +25,10 @@
    "type": "git",
    "subDir": null,
    "scope": "leanprover-community",
-   "rev": "45d016d59cf45bcf8493a203e9564cfec5203d9b",
+   "rev": "fa36772c08508c85c9ba531a8865cdeb391631df",
    "name": "aesop",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "master",
+   "inputRev": "lean-pr-testing-5988",
    "inherited": false,
    "configFile": "lakefile.toml"},
   {"url": "https://github.com/leanprover-community/ProofWidgets4",
