--- a/lake-manifest.json
+++ b/lake-manifest.json
@@ -45,10 +45,10 @@
    "type": "git",
    "subDir": null,
    "scope": "leanprover-community",
-   "rev": "4092e80ba2c54b6a4a8578006b0756d7fe93d3a5",
+   "rev": "0fa8cd29904519892baa9e9e5dcb1818f02923b0",
    "name": "aesop",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "nightly-testing",
+   "inputRev": "lean-pr-testing-6054",
    "inherited": false,
    "configFile": "lakefile.toml"},
   {"url": "https://github.com/leanprover-community/quote4",
@@ -65,10 +65,10 @@
    "type": "git",
    "subDir": null,
    "scope": "leanprover-community",
-   "rev": "939eb0a5876f5f4472de57ca59b841abaa755649",
+   "rev": "660dd9dcf375c9ec3820dbf682117f3978c497b4",
    "name": "batteries",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "nightly-testing",
+   "inputRev": "lean-pr-testing-6054",
    "inherited": false,
    "configFile": "lakefile.toml"},
   {"url": "https://github.com/leanprover/lean4-cli",
