--- a/.github/workflows/maintainer_merge.yml
+++ b/.github/workflows/maintainer_merge.yml
@@ -39,7 +39,7 @@ jobs:
 
           # for debugging, we print some information
           printf '%s' "${COMMENT}" | hexdump -cC
-          printf 'comment<<EOC\n%s\nEOC' "${COMMENT}"
+          printf 'Comment:"%s"\n' "${COMMENT}"
 
           m_or_d="$(printf '%s' "${COMMENT}" |
             sed -n 's=^maintainer  *\(merge\|delegate\)$=\1=p' | head -1)"
