feat(Wiedijk100Theorems): roots of a quartic (#18290)
* Added `quartic_eq_zero_iff` which gives the roots of the quartic equation in terms of a root `u` to a particular cubic equation, and a degenerate case `quartic_eq_zero_iff_of_q_eq_zero`
* Simplified the cubic proof

--- a/docs/100.yaml
+++ b/docs/100.yaml
@@ -176,6 +176,8 @@
   decl   : Theorems100.partition_theorem
 46:
   title  : The Solution of the General Quartic Equation
+  decl   : Theorems100.quartic_eq_zero_iff
+  author : Thomas Zhu
 47:
   title  : The Central Limit Theorem
 48:
