--- a/lake-manifest.json
+++ b/lake-manifest.json
@@ -45,10 +45,10 @@
    "type": "git",
    "subDir": null,
    "scope": "leanprover-community",
-   "rev": "70fef96b919e8d032bbf6016cd284867d503d2d8",
+   "rev": "24d0b61ede545901e80ee866a3609f9e78080034",
    "name": "aesop",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "nightly-testing",
+   "inputRev": "lean-pr-testing-6053",
    "inherited": false,
    "configFile": "lakefile.toml"},
   {"url": "https://github.com/leanprover-community/quote4",
@@ -65,7 +65,7 @@
    "type": "git",
    "subDir": null,
    "scope": "leanprover-community",
-   "rev": "e1406feffe5b670da16287c300b05e9221716798",
+   "rev": "ff8ac6aff39f655e8badcf3fb6df3c5be7e2f332",
    "name": "batteries",
    "manifestFile": "lake-manifest.json",
    "inputRev": "lean-pr-testing-6053",
