--- a/.github/workflows/discover-lean-pr-testing.yml
+++ b/.github/workflows/discover-lean-pr-testing.yml
@@ -24,19 +24,7 @@ jobs:
         git config --global user.name "github-actions"
         git config --global user.email "github-actions@github.com"
 
-    - name: Read date from lean-toolchain
-      id: fetch-date
-      run: |
-        TODAY=$(grep -oP 'nightly-\K\d{4}-\d{2}-\d{2}' lean-toolchain)
-        echo "TODAY=$TODAY" >> "$GITHUB_ENV"
-
-    - name: Set YESTERDAY
-      id: set-yesterday
-      run: |
-        YESTERDAY=$(date -d "$TODAY -1 day" +%Y-%m-%d)
-        echo "YESTERDAY=$YESTERDAY" >> "$GITHUB_ENV"
-
-    - name: Clone lean4-nightly repository and get PRs
+    - name: Clone lean4 repository and get PRs
       id: get-prs
       run: |
         NIGHTLY_URL="https://github.com/leanprover/lean4-nightly.git"
@@ -44,14 +32,20 @@ jobs:
         # Create a temporary directory for cloning
         cd "$(mktemp -d)" || exit 1
         
-        # Clone the repository with a depth of 30 (adjust as needed)
-        git clone --depth 30 "$NIGHTLY_URL"
+        # Clone the repository with a depth of 1
+        git clone --depth 1 "$NIGHTLY_URL"
         
         # Navigate to the cloned repository
         cd lean4-nightly || exit 1
-        YESTERDAY="${{ steps.set-yesterday.outputs.yesterday }}"
-        TODAY="${{ steps.fetch-date.outputs.today }}"
-        PRS=$(git log --oneline "nightly-$YESTERDAY..nightly-$TODAY" | sed 's/.*(#\([0-9]\+\))$/\1/')
+
+        # Shallow fetch of the last two tags
+        LAST_TWO_TAGS=$(git ls-remote --tags | tail -2 | cut -f2)
+        OLD=$(echo "$LAST_TWO_TAGS" | head -1)
+        NEW=$(echo "$LAST_TWO_TAGS" | tail -1)
+        git fetch --depth=1 origin tag "$OLD" --no-tags
+        git fetch --depth=100 origin tag "$NEW" --no-tags
+
+        PRS=$(git log --oneline "$OLD..$NEW" | sed 's/.*(#\([0-9]\+\))$/\1/')
         
         # Output the PRs
         echo "$PRS"
@@ -64,6 +58,7 @@ jobs:
         PRS="${{ steps.get-prs.outputs.prs }}"
         echo "$PRS" | tr ' ' '\n' > prs.txt
         MATCHING_BRANCHES=$(git branch -r | grep -f prs.txt)
+        echo "$MATCHING_BRANCHES"
 
         # Initialize an empty variable to store branches with relevant diffs
         RELEVANT_BRANCHES=""
